# excal-example-plugin

./: README.md  setup.cfg
src/: excal_test_plugin.py
